--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Natürliche Materialien und edles Silber<br />
-								<br />Persönliche und authentische Schmuckstücke</h2>
-								<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</p>
+							<h2>Natürliche Materialien und edles Silber</h2>
+							<p>Persönliche und authentische Schmuckstücke für jeden Anlass. Festlich & bunt, modern & zurückhaltend, fein oder kräftig - eime breite Auswahl an Modellen steht Ihnen auf Anfrage zur Verfügung. Gerne berate ich Sie zu meinen Modellen und fertige individuelle Einzelstücke für Sie an.</p>
 							</header>
 							
 						</div>
@@ -128,7 +127,7 @@
 							<li>&copy; Claudia Haigis-Lange</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>Kontakt: <a href="mailto: c.haigislange@gmail.com">c.haigislange@gmail.com </a></li>
+							<li>Kontakt: silberfaden.esslingen(at)gmail.com </a></li>
 						</ul>
 					</footer>
 
