add: static img links, responsive picture tag for header, text changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="https://drive.google.com/uc?export=view&id=1U18OMVhT_A2Yf_PccPhexNABTFccuYpX" alt="" />
+							<picture>
+								<source srcset="images/gallery/fulls/vert.jpg" type="" media="(max-width: 768px)">
+								<source srcset="images/gallery/fulls/07.jpg" type="">
+								<img src="images/gallery/fulls/07.jpg" alt="" />
+							</picture>
 						</div>
 					</section>
 
@@ -73,28 +77,28 @@
 						<!-- Ketten 1 -->
 						<section class="spotlight style2 fullscreen orient-right content-align-left image-position-center onload-image-fade-in" id="first">
 							<div class="content">
-								<h2>Gestrickte Silberkette mit rotem Gummikern</h2>
+								<h2>Gestrickte Silberkette mit rotem Kautschuk</h2>
 								<p>Ein intensiver Blickfang bei jeder Gelegenheit. Diese Kette besticht durch ihre kräftige Farbe, feine Gestalt und passendem Keramikanhänger. Meine Ketten sind mit vielen Anhängern kombinierbar um immer wieder neu zu überraschen.</p>
 								<!-- <ul class="actions stacked">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul> -->
 							</div>
 							<div class="image">
-								<img src="https://drive.google.com/uc?export=view&id=1drS67jTX4z31A4xdGaNMP5FxZH70M42g" alt="" />
+								<img src="images/gallery/fulls/03.jpg" alt="" />
 							</div>
 						</section>
 
 						<!-- Ketten 2 -->
 						<section class="spotlight style2 orient-left content-align-left image-position-center onload-image-fade-in">
 							<div class="content">
-								<h2>Feine Halskette mit Verzierung</h2>
-								<p>Die Verzierungen im Mittelteil der Silberkette bestechen durch spiegelnde Oberfläche. Grau-blaue Keramikelemte machen diese Kette zu einem subtilen Statement zu schlichter oder ausgefallener Garderobe.</p>
+								<h2>Feine Halskette mit Hämatit</h2>
+								<p>Die Verzierungen im Mittelteil der Silberkette bestechen durch spiegelnde Oberfläche. Grau-blaue Hämatitelemente machen diese Kette zu einem subtilen Statement zu schlichter oder ausgefallener Garderobe.</p>
 								<!-- <ul class="actions stacked">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul> -->
 							</div>
 							<div class="image">
-								<img src="https://drive.google.com/uc?export=view&id=1roNe-ZCnpAepogGue6shuzLyTx-V7Y0S" alt="" />
+								<img src="images/gallery/fulls/08.jpg" alt="" />
 							</div>
 						</section>
 
@@ -102,13 +106,13 @@
 						<section class="spotlight style2 orient-right content-align-left image-position-center onload-image-fade-in">
 							<div class="content">
 								<h2>Edle Silberkette mit gebürstetem Anhänger</h2>
-								<p>Mit ihrem dünnen Durchmesser und dunkelblauen Gummikern ist diese Kette die perfekte Basis für längere Anhänger aus verschiedenen Materialien. Das Material des Anhängers harmoniert mit dem Silber und steht in Konstrast zum inneren der Kette.</p>
+								<p>Mit ihrem dünnen Durchmesser und dunkelblauen Kautschuk ist diese Kette die perfekte Basis für längere Anhänger aus verschiedenen Materialien. Das Material des Anhängers harmoniert mit dem Silber und steht in Konstrast zum inneren der Kette.</p>
 								<!-- <ul class="actions stacked">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul> -->
 							</div>
 							<div class="image">
-								<img src="https://drive.google.com/uc?export=view&id=1U18OMVhT_A2Yf_PccPhexNABTFccuYpX" alt="" />
+								<img src="images/gallery/fulls/01.jpg" alt="" />
 							</div>
 						</section>
 					</div>
@@ -275,7 +279,7 @@
 									</a>
 									<div class="caption">
 										<h3>Feine, runde Silberhalskette #1</h3>
-										<p>Mit Gummikern und gebürstetem Anhänger.</p>
+										<p>Mit Kautschukkern und gebürstetem Anhänger.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -287,7 +291,7 @@
 									</a>
 									<div class="caption">
 										<h3>Geflochtene Silberhalskette #2</h3>
-										<p>Mit Gummikern und Magnetverschluss.</p>
+										<p>Mit Kautschukkern und Magnetverschluss.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -299,7 +303,7 @@
 									</a>
 									<div class="caption">
 										<h3>Runde, gestrickte Silberhalskette #3</h3>
-										<p>Roter Gummikern mit farblich akzentuiertem Keramikanhänger.</p>
+										<p>Roter Kautschukkern mit farblich akzentuiertem Keramikanhänger.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -323,7 +327,7 @@
 									</a>
 									<div class="caption">
 										<h3>Schlichte, runde Silberhalskette #5</h3>
-										<p>Grüner Gummikern mit Steckverschluss in Silber.</p>
+										<p>Grüner Kautschukkern mit Steckverschluss in Silber.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -335,7 +339,19 @@
 									</a>
 									<div class="caption">
 										<h3>Schlichte, runde Silberhalskette #5</h3>
-										<p>Grüner Gummikern mit Steckverschluss in Silber.</p>
+										<p>Grüner Kautschukkern mit Steckverschluss in Silber.</p>
+										<ul class="actions fixed">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/07.jpg" class="image">
+										<img src="images/gallery/fulls/07.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Feine, runde Silberhalskette #1</h3>
+										<p>Mit Kautschukkern und gebürstetem Anhänger.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
