--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
 							</header>
 							<ul class="alt">
 								<li>
-									<h4><a href="https://www.blaubeuren.de/de/Aktuelles/Veranstaltungen?view=publish&item=eventDate&id=2535">Wintermärchenmarkt</a> - 01.12.18 (15 - 20 Uhr) - 02.12.18 (11 - 19 Uhr) Blaubeuren</h3>
+									<h4><a href="https://www.volksfeste-in-deutschland.de/kuerbisfest-im-kloster-lorch.html">Kürbisfest Kloster Lorch</a> - 13.10.19</h3>
 								</li>
 								<li>
-									<h4><a href="https://www.donzdorf.de/kultur-freizeit/maerkte/weihnachtsmarkt.html">Schloss Donzdorf</a> - 08.12.18 (15 - 21 Uhr) - 09.12.18 (11 - 19 Uhr) Donzdorf</h3>
+									<h4><a href="https://www.weihnachtsmaerkte-in-deutschland.de/schloss-weihnachtsmarkt-in-donzdorf.html">Adventsmarkt Schloss Donzdorf</a> - 07.12.18 - 08.12.18 Donzdorf</h3>
 								</li>
 							</ul>
 							
