add: downsize images, add shop link and fix typos

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 						<div class="content">
 							<h1>Silberfaden</h1>
 							<h3 class="major">Handgemachter Silberschmuck aus der Weinstadt Esslingen am Neckar. <br>
-							Individuell und für jeden Charakater.</h3>
+							Individuell und für jeden Charakter.</h3>
 							<ul class="actions stacked">
-								<li><a href="#intro" class="button primary big wide smooth-scroll-middle">Zum Schmuck</a></li>
+								<li><a href="https://www.kasuwa.de/shop/silberfaden" class="button primary big wide smooth-scroll-middle">Shop</a></li>
+								<li><a href="#intro" class="button secondary big wide smooth-scroll-middle">Portfolio</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -442,7 +443,7 @@
 							</header>
 							<div class="content align-left">
 								
-								<p><span class="image left"><img src="images/profile.jpg" alt="" /></span>Inspiriert von der Entstehung des Edelmetalls in Verbindung mit der Natur, mit einem hohen Anspruch an Gestaltung und handwerklichen Können mache ich seit 2004 Schmuck. Mit großem Interesse an ausgefallenden Techniken, entstehen in meiner Werkstatt Schmuckstücke die Gefühle und Stimmungen einfangen. So wird mein Schmuck zu einem geliebten, geschätzten, die Persönlichkeit der Trägerin, unterstützenden Statement, habe ich meine Vorstellung von Schmuck-Design umgesetzt.</p> 
+								<p><span class="image left"><img src="images/profile.jpg" alt="" /></span>Inspiriert von der Entstehung des Edelmetalls in Verbindung mit der Natur, mit einem hohen Anspruch an Gestaltung und handwerklichen Können mache ich seit 2004 Schmuck. Mit großem Interesse an ausgefallenden Techniken, entstehen in meiner Werkstatt Schmuckstücke die Gefühle und Stimmungen einfangen. So wird mein Schmuck zu einem geliebten, geschätzten, die Persönlichkeit der Trägerin, unterstützenden Statement. Diese Vorstellungen setze ich in meinem Schmuck-Design um.</p> 
 							</div>
 						</div>
 					</section>
