add: favicon, fix: typo

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 							</header>
 							<div class="content align-left">
 								
-								<p><span class="image left"><img src="images/profile.jpg" alt="" /></span>Inspiriert von der Entstehung des Edelmetalls in Verbindung mit der Natur, mit einem hohen Anspruch an Gestaltung und handwerklichen Können mache ich seit 2004 Schmuck. Mit großem Interesse an ausgefallenden Techniken, entstehen in meiner Werkstatt Schmuckstücke die Gefühle und Stimmungen einfangen. So wird mein Schmuck zu einem geliebten, geschätzten, die Persönlichkeit der Trägerin, unterstützenden Statement. Diese Vorstellungen setze ich in meinem Schmuck-Design um.</p> 
+								<p><span class="image left"><img src="images/profile.jpg" alt="" /></span>Inspiriert von der Entstehung des Edelmetalls in Verbindung mit der Natur, mit einem hohen Anspruch an Gestaltung und handwerklichen Können mache ich seit 2004 Schmuck. Mit großem Interesse an ausgefallenen Techniken, entstehen in meiner Werkstatt Schmuckstücke die Gefühle und Stimmungen einfangen. So wird mein Schmuck zu einem geliebten, geschätzten, die Persönlichkeit der Trägerin, unterstützenden Statement. Diese Vorstellungen setze ich in meinem Schmuck-Design um.</p> 
 							</div>
 						</div>
 					</section>
