remove: market section, add: instagram button

--- a/index.html
+++ b/index.html
@@ -250,16 +250,17 @@
 						<div class="inner">
 							<header>
 								<h2>Termine</h2>
-								<p>Über das Jahr verteilt können Sie mich auch persönlich auf folgenden Märkten antreffen:</p>
+								<p>Anstehende Marktauftritte können Sie in folgendem Abschnitt finden:</p>
+								<p>Aktuell keine Einträge.</p>
 							</header>
-							<ul class="alt">
+							<!-- <ul class="alt">
 								<li>
 									<h4><a href="https://www.volksfeste-in-deutschland.de/kuerbisfest-im-kloster-lorch.html">Kürbisfest Kloster Lorch</a> - 13.10.19</h3>
 								</li>
 								<li>
 									<h4><a href="https://www.weihnachtsmaerkte-in-deutschland.de/schloss-weihnachtsmarkt-in-donzdorf.html">Adventsmarkt Schloss Donzdorf</a> - 07.12.19 - 08.12.19 Donzdorf</h3>
 								</li>
-							</ul>
+							</ul> -->
 							
 						</div>
 				</section>
@@ -451,6 +452,9 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://www.instagram.com/silberfaden_haigislange/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							</ul>
 							<ul class="actions fit">
 								<li><a 
 									data-name="silberfaden.esslingen" 
