--- a/index.html
+++ b/index.html
@@ -251,16 +251,25 @@
 							<header>
 								<h2>Termine</h2>
 								<p>Anstehende Marktauftritte können Sie in folgendem Abschnitt finden:</p>
-								<p>Aktuell keine Einträge.</p>
+								<!-- <p>Aktuell keine Einträge.</p> -->
 							</header>
-							<!-- <ul class="alt">
+							<ul class="alt">
 								<li>
-									<h4><a href="https://www.volksfeste-in-deutschland.de/kuerbisfest-im-kloster-lorch.html">Kürbisfest Kloster Lorch</a> - 13.10.19</h3>
+									<h4><a href="https://www.promusis.de/edesheim-f-2024/">Kunsthandwerkermarkt Edesheim</a> 13. - 14.04.24</h3>
 								</li>
 								<li>
-									<h4><a href="https://www.weihnachtsmaerkte-in-deutschland.de/schloss-weihnachtsmarkt-in-donzdorf.html">Adventsmarkt Schloss Donzdorf</a> - 07.12.19 - 08.12.19 Donzdorf</h3>
+									<h4><a href="https://eppingen-tourismus.de/event/4-eppinger-kunsthandwerkermarkt-3/">Kunsthandwerkermarkt Eppingen</a> 15. - 16.06.24</h3>
 								</li>
-							</ul> -->
+								<li>
+									<h4><a href="https://www.nuertingen.de/de/nuertingen-fuer-besucher/feste-maerkte/kunsthandwerkermarkt/?L=0">Kunsthandwerkermarkt Nürtingen</a> 27.10.24</h3>
+								</li>
+								<li>
+									<h4><a href="https://www.inspirationen-breuninger.de/">Kunsthandwerkermarkt Wasserschloss Glatt</a> 16. - 17.11.24</h3>
+								</li>
+								<li>
+									<h4><a href="https://www.kloster-maulbronn.de/besuchsinformation/fuehrungen-veranstaltungen/weitere-informationen-zum-ausgewaehlten-angebot/weihnachtsmarkt-im-klosterhof/7571/589852">Weihnachtsmarkt Kloster Maulbronn</a> 7. - 8.12.24</h3>
+								</li>
+							</ul>
 							
 						</div>
 				</section>
