--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 									</a>
 								</li>
 							</ul>
-							<p>&copy; Silberfaden - Claudia Haigis-Lange.</p>
+							<p>&copy; Silberfaden - Claudia Haigis-Lange - 2024</p>
 							<!-- <p><a href="#">Impressum</a></p> -->
 						</div>
 					</footer>
